--- a/Js2.conf
+++ b/Js2.conf
@@ -1,14 +1,61 @@
-hostname =  mp.weixin.qq.com, guide-acs.m.taobao.com
+hostname =  mp.weixin.qq.com, guide-acs.m.taobao.com, zhihu.com, api.zhihu.com, douban.com, netease.com, gw.alicdn.com, acs.m.taobao.com, api.yangkeduo.com, api.pinduoduo.com, api.m.jd.com, trade-acs.m.taobao.com
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
-#TestFlight(By NobyDa)
-^https?:\/\/testflight\.apple\.com\/v\d\/accounts\/.+?\/install$ url script-request-body https://gist.githubusercontent.com/NobyDa/9be418b93afc5e9c8a8f4d28ae403cf2/raw/TF_Download.js
-
 # 替换支付宝内淘票票评分为豆瓣评分 https://t.me/cool_scripts/307 
 ^https:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.film\.mtopshowapi\.getextendshowbyid url script-response-body https://raw.githubusercontent.com/Peng-YM/QuanX/master/Rewrites/TaoPiaoPiao/taopiaopiao.js
 
+# 知乎网页去广告&推荐列表
+https://www\.zhihu\.com/api/v4/questions/\d+/related-readings url reject-200
+https://www\.zhihu\.com/api/v4/answers/\d+/related-readings url reject-200
+https://www\.zhihu\.com/api/v4/hot_recommendation url reject-200
+https://www\.zhihu\.com/commercial_api/banners_v3/mobile_banner url reject-200
+https://zhuanlan\.zhihu\.com/api/articles/\d+/recommendation url reject-200
+# 先重写到桌面版
+^https:\/\/www\.zhihu\.com\/(question|topic) url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36$2
 
+# 再注入 CSS 进行优化
+^https:\/\/www\.zhihu\.com\/question url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/zhihux.user.js
+^https:\/\/www\.zhihu\.com\/topic url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/zhihux.user.js
 
+# 去掉知乎跳转第三方网站的中间页面
+^https?:\/\/link\.zhihu\.com/\?target=(https?)%3A//(.*) url 307 $1://$2
 
+# 不跳转应用商店
+^https:\/\/oia\.zhihu\.com\/answers\/([0-9]+)\?.* url 307 https://www.zhihu.com/answer/$1
+^https:\/\/oia\.zhihu\.com\/articles\/([0-9]+)\?.* url 307 https://zhuanlan.zhihu.com/p/$1
+
+# 知乎去广告 vip (onewayticket255)
+;^https://api.zhihu.com/(ad|drama|fringe|commercial|market/popover|search/(top|preset|tab)|.*featured-comment-ad) url reject-200
+^https://api.zhihu.com/people/self$ url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/zhihu/people.js
+^https://api.zhihu.com/people/self/new_user_card url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/zhihu/new_user.js
+^https://api.zhihu.com/unlimited/vip_purchase url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/zhihu/vippruchase.js
+^https://api.zhihu.com/market/people/self url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/zhihu/people1.js
+^https://api.zhihu.com/bazaar/mine/personal$ url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/zhihu/mine_personal.js
+^https://api.zhihu.com/bazaar/tab_header$ url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/zhihu/tab_header.js
+^https://api.zhihu.com/moments/recommend url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/zhihu/feed.js
+^https://api.zhihu.com/topstory/recommend url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/zhihu/recommend.js
+^https://api.zhihu.com/v4/questions url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/zhihu/answer.js
+
+# 网易云音乐
+^https://only\b.*nstool.netease.com\/info.js\?referer=https:\/\/nstool.netease.com\/info.js url reject
+
+#  淘宝
+^https:\/\/gw.alicdn.com\/tfs\/.+-1125-1602 url reject
+
+# 【菜鸟裹裹】去广告
+#无hostname
+^https:\/\/acs\.m\.taobao\.com\/gw\/mtop\.cainiao\.nbnetflow\.guoappstartup\.ads\.show url reject
+^https:\/\/acs\.m\.taobao\.com\/gw\/mtop\.cainiao\.guoguo\.nbnetflow\.ads\.recommend url reject
+^https:\/\/acs\.m\.taobao\.com\/gw\/mtop\.cainiao\.guoguo\.nbnetflow\.ads\.show url reject
+
+# > 072 拼多多 - api.yangkeduo.com,api.pinduoduo.com
+^https?:\/\/api\.(pinduoduo|yangkeduo)\.com\/api\/cappuccino\/splash url reject
+
+# 京东比价 (yichahucha)
+^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
+
+# 淘宝比价 (yichahucha)
+^http://.+/amdc/mobileDispatch url script-request-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
+^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
