--- a/Q-Search_All_in_one.conf
+++ b/Q-Search_All_in_one.conf
@@ -50,6 +50,7 @@
 
 # bi: 必应
 # bd：百度搜索
+# ba：百度搜索
 # ddg：DuckDuckGo 搜索
 # 无指令则转 Google 搜索
 
@@ -179,6 +180,9 @@
 ^https:\/\/duckduckgo.com\/\?q=bi\+([^&]+).+ https://cn.bing.com/search?q=$1 302
 
 # bd: 百度
+^https:\/\/duckduckgo.com\/\?q=bd\+([^&]+).+ https://www.baidu.com/s?wd=$1 302
+
+#ba: 百度
 ^https:\/\/duckduckgo.com\/\?q=bd\+([^&]+).+ https://www.baidu.com/s?wd=$1 302
 
 # ddg: DuckDuckGo 
